; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_crypto_libtomcrypt.c_aes_encrypt_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_crypto_libtomcrypt.c_aes_encrypt_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CRYPT_OK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @aes_encrypt_init(i32* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = call i8* @os_malloc(i32 1)
  store i8* %7, i8** %6, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = icmp eq i8* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %23

11:                                               ; preds = %2
  %12 = load i32*, i32** %4, align 8
  %13 = load i64, i64* %5, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = call i64 @aes_setup(i32* %12, i64 %13, i32 0, i8* %14)
  %16 = load i64, i64* @CRYPT_OK, align 8
  %17 = icmp ne i64 %15, %16
  br i1 %17, label %18, label %21

18:                                               ; preds = %11
  %19 = load i8*, i8** %6, align 8
  %20 = call i32 @os_free(i8* %19)
  store i8* null, i8** %3, align 8
  br label %23

21:                                               ; preds = %11
  %22 = load i8*, i8** %6, align 8
  store i8* %22, i8** %3, align 8
  br label %23

23:                                               ; preds = %21, %18, %10
  %24 = load i8*, i8** %3, align 8
  ret i8* %24
}

declare dso_local i8* @os_malloc(i32) #1

declare dso_local i64 @aes_setup(i32*, i64, i32, i8*) #1

declare dso_local i32 @os_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
